<resources>
    <string name="app_name">AndroidLabActivity</string>
    <string name="back">Back</string>
    <string name="english_grade">English Grade</string>
    <string name="filipino_grade">Filipino Grade</string>
    <string name="mapeh_grade">MAPEH Grade</string>
    <string name="math_grade">Math Grade</string>
    <string name="science_grade">Science Grade</string>
    <string name="submit">Submit</string>
    <string name="compute_average">Compute Average</string>
    <string name="contacts">Contacts</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="back1">Back</string>
    <string name="your_average_is">Your average is:</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_list">Contact List</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="name1">Name</string>
    <string name="email">Email</string>
    <string name="phone1">Phone</string>
    <string name="age2">Age</string>
    <string name="name3">Name</string>
    <string name="email2">Email</string>
    <string name="phone2">Phone</string>
</resources>