<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:padding="16dp"
    android:background="@drawable/bg1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/mathGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:hint="@string/math_grade"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#FFFFFF"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/filipinoGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:hint="@string/filipino_grade"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#FFFFFF"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/scienceGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/science_grade"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#FFFFFF"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/mapehGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:hint="@string/mapeh_grade"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#FFFFFF"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/englishGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:hint="@string/english_grade"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#FFFFFF"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/submit"
            android:textColor="#212121"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/holo_red_dark"
            android:layout_marginBottom="16dp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>
